<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintWidth_max="@dimen/max_width">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/homeStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                tools:showIn="@layout/activity_main">

                <TextView
                    android:id="@+id/textViewPolarAlert"
                    style="@style/Polar.Text.L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_l"
                    android:text="@string/polar_alert" />

                <Button
                    android:id="@+id/connectButton"
                    style="@style/Polar.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/loadingIndicator"
                    style="@style/Polar.LoadingIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setupStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:showIn="@layout/activity_main">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_l"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMin"
                        style="@style/Polar.Text.L"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/min"
                        android:textAlignment="textEnd" />

                    <ImageView
                        android:id="@+id/imageViewHeart"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginLeft="@dimen/margin_s"
                        android:layout_marginRight="@dimen/margin_s"
                        android:contentDescription="@string/heart"
                        app:srcCompat="@drawable/heart" />

                    <TextView
                        android:id="@+id/textViewMax"
                        style="@style/Polar.Text.L"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/max"
                        android:textAlignment="textStart" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewSetupBPM"
                    style="@style/Polar.Text.M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_m" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/hrRangeSlider"
                    style="@style/Polar.Slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_l"
                    android:contentDescription="@string/hr_range_slider"
                    android:valueFrom="40.0"
                    android:valueTo="220.0" />

                <TextView
                    android:id="@+id/textViewSetupVolume"
                    style="@style/Polar.Text.M"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_m" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/volumeSlider"
                    style="@style/Polar.Slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_l"
                    android:contentDescription="@string/volume_slider"
                    android:valueFrom="0.0"
                    android:valueTo="100.0" />

                <Button
                    android:id="@+id/startButton"
                    style="@style/Polar.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/runStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textViewRunBPM"
                    style="@style/Polar.Text.XL"
                    android:gravity="center"
                    android:text="100 BPM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewRunTip"
                    style="@style/Polar.Text.S"
                    android:gravity="center"
                    android:text="Good"
                    android:layout_marginBottom="@dimen/margin_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/stopButton"
                    style="@style/Polar.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>